[gd_scene load_steps=8 format=2]

[ext_resource path="res://default_env.tres" type="Environment" id=1]
[ext_resource path="res://Gui/Worldview/view3d.gd" type="Script" id=2]
[ext_resource path="res://Gui/Gizmos/Grid3D.tscn" type="PackedScene" id=3]
[ext_resource path="res://Gui/Gizmos/Camera.tscn" type="PackedScene" id=4]
[ext_resource path="res://Gui/Worldview/NodeTree.gd" type="Script" id=5]

[sub_resource type="World" id=1]
environment = ExtResource( 1 )

[sub_resource type="ViewportTexture" id=2]
viewport_path = NodePath("Viewport")

[node name="3D View" type="HSplitContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
focus_mode = 1
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="."]
size = Vector2( 100, 100 )
own_world = true
world = SubResource( 1 )

[node name="Surfaces" type="Spatial" parent="Viewport"]

[node name="Grid3D" parent="Viewport" instance=ExtResource( 3 )]

[node name="DirectionalLight" type="DirectionalLight" parent="Viewport"]

[node name="CameraViewer" parent="Viewport" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -13.8483 )

[node name="Draw" type="Sprite" parent="Viewport"]

[node name="Temp" type="Spatial" parent="Viewport"]

[node name="Tree" type="PanelContainer" parent="."]
margin_right = 174.0
margin_bottom = 720.0

[node name="VBox" type="VBoxContainer" parent="Tree"]
margin_left = 7.0
margin_top = 7.0
margin_right = 167.0
margin_bottom = 713.0

[node name="Search" type="LineEdit" parent="Tree/VBox"]
margin_right = 160.0
margin_bottom = 24.0
placeholder_text = "search"

[node name="Items" type="Tree" parent="Tree/VBox"]
margin_top = 28.0
margin_right = 160.0
margin_bottom = 706.0
rect_min_size = Vector2( 160, 0 )
size_flags_vertical = 3
hide_root = true
script = ExtResource( 5 )

[node name="PanelContainer" type="PanelContainer" parent="."]
margin_left = 186.0
margin_right = 1280.0
margin_bottom = 720.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1087.0
margin_bottom = 713.0
focus_mode = 1
texture = SubResource( 2 )
expand = true
stretch_mode = 1
flip_v = true

[node name="SpeedLabel" type="Label" parent="PanelContainer/TextureRect"]
margin_right = 40.0
margin_bottom = 14.0
text = "Speed: 2.0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Controls" type="VBoxContainer" parent="PanelContainer/TextureRect"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -200.0
margin_bottom = 40.0
grow_horizontal = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckButton" type="CheckButton" parent="PanelContainer/TextureRect/Controls"]
margin_right = 200.0
margin_bottom = 40.0
text = "Show Node Names"
align = 2
[connection signal="draw" from="Viewport/Draw" to="." method="_on_Draw_draw"]
[connection signal="text_changed" from="Tree/VBox/Search" to="Tree/VBox/Items" method="_on_Search_text_changed"]
[connection signal="item_selected" from="Tree/VBox/Items" to="Tree/VBox/Items" method="_on_Items_item_selected"]
[connection signal="node_selected" from="Tree/VBox/Items" to="." method="_on_Items_node_selected"]
[connection signal="item_rect_changed" from="PanelContainer/TextureRect" to="." method="_on_TextureRect_item_rect_changed"]
[connection signal="toggled" from="PanelContainer/TextureRect/Controls/CheckButton" to="." method="_on_CheckButton_toggled"]
